Set Timer height & width to 100% when screen is 1024px

--- a/src/components/Timer/Timer.css
+++ b/src/components/Timer/Timer.css
@@ -11,3 +11,10 @@ p {
   margin: 0;
   padding: 0;
 }
+
+@media screen and (max-width: 1024px) {
+  :root {
+    --timer-height: 100%;
+    --timer-width: 100%;
+  }
+}
