--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,23 @@
 :root {
   --main-font: 'Roboto', sans-serif;
+  --timer-background-color: #fff;
+  --timer-border: 1px solid #000;
+  --timer-height: 70%;
+  --timer-width: 70%;
 }
 
-body {
+body,
+div,
+p {
   margin: 0;
   padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@media screen and (max-width: 1024px) {
+  :root {
+    --timer-height: 100%;
+    --timer-width: 100%;
+  }
 }
