--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
   --timer-border: 1px solid #000;
   --timer-height: 70%;
   --timer-width: 70%;
+  --button-border: 3px solid #000;
+  --button-text-size: 2em;
 }
 
 body,
@@ -19,5 +21,6 @@ p {
   :root {
     --timer-height: 100%;
     --timer-width: 100%;
+    --button-text-size: 4em;
   }
 }
