--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,19 @@
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 :root {
-  --main-font: 'Roboto', sans-serif;
-  --timer-background-color: #fff;
-  --timer-border: 1px solid #000;
+  --timer-border: 1px solid #000000;
   --timer-height: 70%;
   --timer-width: 70%;
-  --button-border: 3px solid #000;
-  --button-text-size: 2em;
+
+  --button-border: 3px solid #000000;
+  --button-text-size: 3em;
 }
 
 body,
@@ -13,8 +21,6 @@ div,
 p {
   margin: 0;
   padding: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 @media screen and (max-width: 1024px) {
