--- a/src/components/TimerButton/TimerButton.css
+++ b/src/components/TimerButton/TimerButton.css
@@ -1,7 +1,3 @@
 .timer-button {
-  background: none;
-  outline: none;
-  border: none;
-  color: #000;
-  cursor: pointer;
+  display: inline-block;
 }
