--- a/src/components/Timer/Timer.css
+++ b/src/components/Timer/Timer.css
@@ -5,3 +5,11 @@
   height: 100vh;
   width: 100%;
 }
+
+button {
+  background: none;
+  outline: none;
+  border: none;
+  color: #000;
+  cursor: pointer;
+}
