--- a/src/components/Timer/Timer.css
+++ b/src/components/Timer/Timer.css
@@ -24,6 +24,11 @@
   margin-bottom: 25px;
 }
 
+#break-label,
+#session-label {
+  text-align: center;
+}
+
 button {
   background: none;
   outline: none;
