--- a/src/components/Timer/Timer.css
+++ b/src/components/Timer/Timer.css
@@ -13,6 +13,25 @@
   margin-bottom: 25px;
 }
 
+.timer {
+  border: 7px solid #000;
+  margin: 20px auto 10px auto;
+  width: 270px;
+  height: 160px;
+  border-radius: 10px;
+  position: relative;
+}
+
+.timer-wrapper {
+  position: absolute;
+  width: 190px;
+  height: 110px;
+  left: 50%;
+  top: 50%;
+  margin-left: -95px;
+  margin-top: -95px;
+}
+
 #timer-label {
   font-size: 1.6em;
   margin: 25px 0 25px;
