--- a/src/components/Timer/Timer.css
+++ b/src/components/Timer/Timer.css
@@ -5,7 +5,7 @@
 }
 
 .timer {
-  border: 7px solid #000;
+  border: 4px solid #4c4c4c;
   margin: 20px auto 10px auto;
   width: 270px;
   height: 160px;
