--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,8 +4,8 @@ body {
   align-items: center;
   height: 100vh;
   font-size: 30px;
-  background: #fff8dc;
-  color: #ff7f50;
+  background: #fff;
+  color: #008cff;
   text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
