--- a/src/components/Timer/Timer.css
+++ b/src/components/Timer/Timer.css
@@ -39,12 +39,12 @@ button {
 .footer {
   text-align: center;
   margin-top: 15px;
-  color: #c4c4c4;
+  color: #4c4c4c;
 }
 
 .footer a {
   text-decoration: none;
-  color: #c4c4c4;
+  color: #4c4c4c;
 }
 
 .footer a:hover {
