--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,7 +4,7 @@ body {
   align-items: center;
   height: 100vh;
   font-size: 30px;
-  background: #fff;
+  background: #f0f0f0;
   color: #008cff;
   text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
